modify search function and improve

--- a/app/src/main/res/layout/fragment_gank.xml
+++ b/app/src/main/res/layout/fragment_gank.xml
@@ -11,7 +11,10 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/gank_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="16dp"
+            android:clipToPadding="false"
+            android:clipChildren="false">
 
         </android.support.v7.widget.RecyclerView>
 
